# django-fast-model-serializers

./: LICENSE  README.md  pyproject.toml
django_fast_model_serializers/: serializers.py
